
Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/issues/new/choose).

## v2.10.3.6 Change Log - WIP dev_5
- [add] Output AI (kenwwood broadcast info) over cat1/2/3/4/tcpipcat options. (included in dev_4 but here for completeness)
- [add] option in setup for S9 @ -73 or -93 for 30MHz and 144MHz (Fixes #418)
- [fix] decouple of the rx1/rx2 attenuator preamp/s-att boxes from tx-att. (Fixes #399)
- [change] simplification improvements to db import

## v2.10.3.6 Change Log - WIP dev_4
- [add] CW Edge Length: This is currently only for the ANAN-G2. The ability to load CW edges into the firmware of the legacy ANAN products is not available. The minimum Edge Length is 15ms which, based upon testing, is required to meet the new ARRL Guidelines.  However, due to the edge shape, a 15ms total edge yields about 5ms in the range of 10% - 90% amplitude, i.e., the 15ms number is a bit misleading.
- [add] New NR features: (1) the "Trained" gain method as described below, (2) an alternative Noise Power Estimation method called "NSTAT" which should have a faster response to changing noise levels, and (3) code added in the AE Filter that removes an annoying rumble that could occasionally occur.
- ["Trained"] The new "Trained" NR has a file (zetaHat.bin). It is a data file that contains the essential information extracted from "training" the algorithm. The algorithm is currently "trained" with about 72 hours of noise and speech recordings. The file may, at some point, be replaced or augmented if different training is required.

## v2.10.3.6 Change Log - WIP dev_3
- [add] Fn keys now activate messages directly in the cwx form
- [fix] changes to fix issue #407, No TX output when initially going to QSK
- [fix] TCI spot would be incorrectly shown if it came from RumLog. Thetis now ignores as string of "nil" which RumLog sends (version dependant)
- [fix] attempt to resolve issue where out of array bounds errors are shown at startup