@@ -2395,6 +2395,7 @@ namespace Thetis
             chkShowTCISpots_CheckedChanged(this, EventArgs.Empty);
             chkSpotOwnCallAppearance_CheckedChanged(this, EventArgs.Empty);
 
+            //MIDI
             chkIgnore14bitMidiMessages_CheckedChanged(this, EventArgs.Empty);
             chkMidiControlIDincludesChannel_CheckedChanged(this, EventArgs.Empty);
             chkMidiControlIDincludesStatus_CheckedChanged(this, EventArgs.Empty);
@@ -2480,6 +2481,10 @@ namespace Thetis
             chkAutoPowerOn_CheckedChanged(this, e);
             nudPBsnrShiftRx1_ValueChanged(this, e);
             nudPBsnrShiftRx2_ValueChanged(this, e);
+
+            //
+            chkSWRProtection_CheckedChanged(this, e);
+            chkSWRTuneProtection_CheckedChanged(this, e);
         }
 
         public string[] GetTXProfileStrings()
@@ -14768,6 +14773,7 @@ namespace Thetis
         private void chkSWRProtection_CheckedChanged(object sender, EventArgs e)
         {
             console.SWRProtection = chkSWRProtection.Checked;
+            udSwrProtectionLimit.Enabled = chkSWRProtection.Checked;
         }
 
         public bool ATTOnTXChecked
@@ -15410,6 +15416,7 @@ namespace Thetis
         private void chkSWRTuneProtection_CheckedChanged(object sender, EventArgs e)
         {
             console.DisableSWRonTune = chkSWRTuneProtection.Checked;
+            udTunePowerSwrIgnore.Enabled = chkSWRTuneProtection.Checked;
         }
 
         private void tbDisplayFFTSize_Scroll(object sender, EventArgs e)
@@ -26888,6 +26895,16 @@ namespace Thetis
         {
             if(radBelow144.Checked)
                 console.S9Frequency = 144.0;
+        }
+
+        private void udSwrProtectionLimit_ValueChanged(object sender, EventArgs e)
+        {
+            console.SwrProtectionLimit = (float)udSwrProtectionLimit.Value;
+        }
+
+        private void udTunePowerSwrIgnore_ValueChanged(object sender, EventArgs e)
+        {
+            console.TunePowerSwrIgnore = (float)udTunePowerSwrIgnore.Value;
         }
     }
 
